packages/build/tests/error/build/fixtures/cancel/plugin.js
module.exports = {
  async onInit({
    utils: {
      build: { cancelBuild },
    },
  }) {
    cancelBuild('test')
  },
}
